--- a/Contest.vcxproj.filters
+++ b/Contest.vcxproj.filters
@@ -3185,6 +3185,9 @@
     <ClCompile Include="GCJ\2014\R2-A.cpp">
       <Filter>GCJ\2014</Filter>
     </ClCompile>
+    <ClCompile Include="GCJ\2014\R2-B.cpp">
+      <Filter>GCJ\2014</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Library\header.h">
